<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="12dp"
        android:drawableLeft="@drawable/inicial"
        android:fontFamily="@font/leonardo"
        android:paddingStart="8dp"
        android:textStyle="bold"
        android:text="@string/deletar_categoria_title"
        android:textColor="@color/app_financa2"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_info_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_margin="16dp"
        android:fontFamily="@font/leonardo"
        android:text="@string/deletar_categoria_descricao"
        android:textColor="@color/app_financa2"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/leonardo"
            android:textColor="@color/white"
            style="@style/CustomButton"
            android:text="@string/delete"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>