<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/Ola_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:drawableLeft="@drawable/inicial"
        android:drawablePadding="12dp"
        android:fontFamily="@font/leonardo"
        android:paddingStart="8dp"
        android:text="@string/app_name"
        android:textColor="@color/app_financa2"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Container para agrupar os TextViews -->
    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/tela_principal_bg"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/Ola_user"
        tools:layout_editor_absoluteX="18dp">

        <TextView
            android:id="@+id/Saldo_atual"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/agrandir"
            android:text="Despesas totais"
            android:textColor="@color/app_financa2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/valor_saldo"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/leonardo"
            android:text="R$ 00,00"
            android:textColor="@color/app_financa2"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_categorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/leonardo"
        android:text="Categorias de despesa"
        android:textColor="@color/app_financa2"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/container_layout"
        tools:layout_editor_absoluteX="18dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categoria"
        android:layout_width="367dp"
        android:layout_height="69dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorias"
        tools:ignore="MissingConstraints"
        tools:listitem="@layout/item_categoria" />

    <TextView
        android:id="@+id/tv_despesas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/leonardo"
        android:text="Despesas"
        android:textColor="@color/app_financa2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_categoria" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_despesa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/despesas_dia_bg"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btn_adicionar_despesa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_despesas"
        tools:ignore="MissingConstraints"
        tools:listitem="@layout/item_despesa" />

    <LinearLayout
        android:id="@+id/ll_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leonardo"
            android:gravity="center"
            android:text="@string/deletar_categoria_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/agrandir"
            android:gravity="center"
            android:text="@string/categoria_vazia_descricao"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_empty_list" />

        <Button
            android:id="@+id/btn_adicionar_vazio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leonardo"
            android:textSize="17sp"
            android:textColor="@color/white"
            style="@style/CustomButton"
            android:textStyle="bold"
            android:text="@string/add" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_adicionar_despesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/leonardo"
        android:text="Adicionar despesa"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        style="@style/CustomButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>